--- a/style.css
+++ b/style.css
@@ -1,3 +1,100 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 *{
     box-sizing: border-box;
+}
+
+body{
+    font-family: 'Roboto', sans-serif;
+}
+
+.container{
+    max-width: 1195px;
+    margin: 0 auto;
+}
+
+.header{
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+}
+
+.search__form{
+    margin-left: 76px;
+    background: rgba(238, 238, 238, 0.71);
+    border-radius: 10px;
+    display: flex;
+    max-width: 620px;
+    flex-grow: 1;
+    position: relative;
+}
+
+.search__input{
+    background-color: transparent;
+    border: none;
+    width: 100%;
+    padding: 13px 20px 13px 20px;
+    font-size: 16px;
+}
+
+.search__button{
+    background-color: transparent;
+    border: none;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    padding-right: 18px;
+    padding-left: 18px;
+    cursor: pointer;
+}
+
+.auth{
+    margin-left: auto;
+}
+
+.login{
+    background: #EBEBEB;
+    border-radius: 50px;
+    padding: 16px 29px 17px 30px;
+    text-decoration: none;
+    color: #000000;
+    display: block;
+    transition: 0.3s ease-in-out;
+    font-size: 14px;
+}
+
+.login:hover{
+    background: #EC762A;
+    color: white;
+}
+
+.logo__image{
+    width: 128px;
+}
+
+.shopping__card{
+    text-decoration: none;
+    width: 49px;
+    height: 49px;
+    border-radius: 50%;
+    background-color: #EC762A;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 30px;
+    position: relative;
+}
+
+.shopping__notify{
+    color: #000000;
+    background-color: #FFAF19;
+    padding: 5px;
+    border-radius: 50%;
+    font-size: 8px;
+    line-height: 9px;
+    display: block;
+    position: absolute;
+    bottom: -5px;
+    right: 0;
 }
