--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
     padding: 0;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body{
     font-family: 'Roboto', sans-serif;
 }
@@ -437,4 +441,37 @@ li{
     display: block;
     margin: 0 auto;
     margin-top: 60px;
+}
+
+.footer{
+    background-color: #F6F6F6;
+    padding: 40px 0;
+}
+
+.footer__wrapper{
+    display: flex;
+    align-items: center;
+}
+
+.footer__logo{
+    margin-right: 50px;
+}
+
+.footer__link{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 23px;
+    text-decoration-line: underline;
+    color: #000000;
+    margin-left: 50px;
+}
+
+.social__links{
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+.social__link{
+    margin-left: 20px;
 }
