--- a/style.css
+++ b/style.css
@@ -443,6 +443,59 @@ li{
     margin-top: 60px;
 }
 
+.benefits__name{
+    margin: 100px 0 52px 0;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 23px;
+}
+
+.benefits__cards{
+    margin-bottom: 100px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.benefits__card{
+    width: 270px;
+    height: 297px;
+    background: #FFFFFF;
+    border: 1px solid #E9E9E9;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.1);
+    border-radius: 18px;
+    overflow: hidden;
+}
+
+.benefits__wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.benefits__image{
+    margin-top: 30px;
+}
+
+.benefits__title{
+    font-weight: 500;
+    font-size: 16px;
+    width: 160px;
+    line-height: 23px;
+    text-align: center;
+    margin: 34px 0 13px 0;
+}
+
+.benefits_description{
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 22px;
+    text-align: center;
+    color: #49494F;
+    margin-bottom: 25px;
+    width: 225px;
+}
+
 .footer{
     background-color: #F6F6F6;
     padding: 40px 0;
